--- a/styles.css
+++ b/styles.css
@@ -124,12 +124,14 @@ footer {
     height: 100%;
     object-fit: cover;
     opacity: 0;
-    animation: fade 9s infinite;
+    animation: fade 15s infinite;
 }
 
 .slider img:nth-child(1) { animation-delay: 0s; }
 .slider img:nth-child(2) { animation-delay: 3s; }
 .slider img:nth-child(3) { animation-delay: 6s; }
+.slider img:nth-child(4) { animation-delay: 9s; }
+.slider img:nth-child(5) { animation-delay: 12s; }
 
 @keyframes fade {
     0%, 33% { opacity: 1; }
